fix h3 spacing
was applying for h3's that were the first child of any container, instead of just the first child of the solidbar container

--- a/redesign/website/styles/styles.css
+++ b/redesign/website/styles/styles.css
@@ -156,7 +156,7 @@ p.byline {
 	font-size: 1.6em;
 }
 
-.solidbar h3:first-child {
+.solidbar > h3:first-child, .solidbar > div:first-child > h3:first-child {
 	margin-top: 0;
 }
 
